[package]
name = "jset_desk"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk         = "^1.2"
lazy_static  = "^1.4"
lodepng      = "^3.5"
num_cpus     = "^1.13"
serde        = "^1.0"
serde_derive = "^1.0"
toml         = "^0.5"