[package]
name = "jset_desk"
description = "an application for drawing colored Julia sets"
version = "0.2.8"
homepage = "https://github.com/d2718/jset-desk"
repository = "https://github.com/d2718/jset-desk"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk         = "^1.2"
lazy_static  = "^1.4"
png          = "^0.17"
num_cpus     = "^1.13"
serde        = "^1.0"
serde_derive = "^1.0"
toml         = "^0.5"

[features]
# For systems where a window will only get raised if it's hidden before
# a call to `.show()`.
hide_before_raise = []